...
    <string name="action_sign_in">Sign in</string>
    <string name="action_registration">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_registration_short">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_password_mismatch">Confirmed password is different</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_registration">Sign up</string>
...
